--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -224,7 +224,7 @@
           "sampler": "default",
           "albedo" :"cat",
           "roughness":"black",
-          "specular":"white",
+          "specular":"black",
           "ambient_occlusion":"black"
         },
         "fish": {
@@ -299,6 +299,20 @@
                 "type": "Collision"
               }
             ]
+          },
+          {
+              "position": [0, 1, -1],
+              "rotation": [0, -1, -1],
+              "components": [
+                  {
+                      "type": "Light",
+                      "lightType": "spot",
+                      "diffuse":[1, 1, 1],
+                      "specular":[1, 1, 1],
+                      "cone_angles":[40, 0],
+                      "attenuation":[0.1, 0, 0]
+                  }
+              ]
           }
         ]
       },
